Replaces overlfow hidden with padding 1px to stop margin collapses.

--- a/src/less/cf-expandables.less
+++ b/src/less/cf-expandables.less
@@ -111,9 +111,9 @@
 }
 
 .expandable_content {
-    // overflow hidden is used to prevent margin collapsing which causes
+    // padding: 1px is used to prevent margin collapsing which causes
     // jumpiness when animating the expand and collapse.
-    overflow: hidden;
+    padding: 1px;
 }
 
 
